Fixed BannerNotification styling on mobile

--- a/beta/components.css
+++ b/beta/components.css
@@ -73,8 +73,10 @@
 	left: 50%;
 	top: 15px;
 	transform: translate(-50%, 0);
+	width: calc(100% - 40px);
+	max-width: 250px;
+	min-height: 60px;
 	z-index: 10;
-	height: 60px;
 	border-radius: 30px;
 	background-color: var(--page-background-color);
 	box-shadow: 0 0 10px var(--light-shadow-color);
@@ -99,7 +101,7 @@
 }
 
 .bannerNotification .content {
-	margin: 0 20px 0 55px;
+	margin: 10px 20px 10px 55px;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
